@@ -1,4 +1,4 @@
 <configuration>
   <dllmap dll="libgphoto2.so" target="libgphoto2.so.6"/>
-  <dllmap dll="libgphoto2_port.so" target="libgphoto2_port.so.0"/>
+  <dllmap dll="libgphoto2_port.so" target="libgphoto2_port.so.9"/>
 </configuration>
